# Sogna

./: .claudeignore  .cursorignore  .env  .gitattributes  .gitignore  .rgignore  .sognarules  ANALISIS_TOOLKIT_SOGNA.md  CLAUDE.md  GUIDE.md  README.md  Sogna.bat  Sogna_App.vbs  inmosogna_inframap.html  map.md  package-lock.json  package.json  para_empezar3004.md  prompt.md  sogna.js  sogna.md  sogna_optimization_log.md  sognatore.js  test_prd.md  walkthrough.md
.claude/: sogna-bridge.md  sogna-ecosystem.md
Sogna/: .architectural_map.md  .cursorignore  .env  .env.bak  .env.example  .env.production  .gitignore  .npmrc  .rgignore  .sogna_portal  .sognarc.json  CLAUDE.md  README.md  RULES.md  THREAD_INTEL.md  audit.json  audit_report.txt  boot_logs.txt  dependencies.txt  diagnose_curator.py  dream.cmd  dream.sh  fix_ts_errors.py  index.html  mcp.contract.json  package.json  platform.manifest.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyrightconfig.json  requirements-uma.txt  sentinel_report.txt  sogna-policy.yaml  sogna.js  sogna_bridge.bat  sogna_pulse.md  sognatore.js  test_heal.py  test_nav.py  tsconfig.base.json  (+4 more)
Sogna/Sognatore/resources/templates/tauri-v2/src-tauri/: Cargo.toml  tauri.conf.json
Sogna/Sognatore/resources/templates/tauri-v2/src-tauri/src/: lib.rs  main.rs
Sogna/Toolkit/engines/Assembler/python-sdk/: README.md  pyproject.toml
Sogna/Toolkit/engines/Assembler/python-sdk/src/twentyfirst_sdk/: client.py
branding/: comparison_analysis.md  institutional_standard_analysis.md
obsidian/: AI_PLUGIN_ANALYSIS.md  API_CONNECTIVITY.md  ARCHITECTURE.md  (+18 more)
(+8788 files in other folders)
