[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Assembler"
version = "0.0.1"
description = "Server-side Python SDK for Assembler Agents"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
  { name = "Assembler.dev" },
]
dependencies = [
  "requests>=2.31.0",
]
keywords = [
  "ai",
  "agent",
  "sandbox",
  "Assembler",
  "Assembler.dev",
  "sdk",
  "python",
]

[project.urls]
Homepage = "https://Assembler.dev/agents"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
