[package]
name = "sogna-app"
version = "0.1.0"
description = "A Sogna Project Factory App"
authors = ["Sognatore Operator"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[dependencies]
tauri = { version = "2.0.0-rc", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lib]
name = "sogna_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[profile.release]
panic = "abort" # Strip symbols and reduce size
codegen-units = 1
lto = true
opt-level = "s"
strip = true
